--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -1,7 +1,8 @@
 // *START LOADING 
 .spinner {
     top: 50vh;
-    left: 40vw;
+    left: 45vw;
+    font-weight: 700;
 }
 
 .spinner-container {
@@ -40,6 +41,9 @@ main {
         .row {
             p {
                 font-weight: 900;
+                @media screen and (max-width:500px) {
+                    font-size: 12px;
+                }
             }
         }
     }
@@ -55,5 +59,28 @@ footer {
     background-color: $secondary;
     .partner-footer {
         line-height: 10px;
+    }
+}
+
+// * FADE
+
+.fadein {
+    animation: fadein 3s;
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 1;
+        
+    }
+    20% {
+        transform: translateY(0px);
+    }
+    90% {
+        transform: translateY(-30px);
+    }
+
+    100% {
+        transform: translateY(0px)
     }
 }
