--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "mixin";
+@import "function";
 
 @import "../../node_modules/bootstrap/scss/bootstrap"; 
 @import "../../node_modules/bootstrap-icons/font/bootstrap-icons.css";
