--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10849,22 +10849,35 @@ footer .partner-footer {
   line-height: 10px;
 }
 
+.fadingXinput {
+  opacity: 0;
+  transform: translateY(-100px);
+}
+
+.fadingXoutput {
+  opacity: 1;
+  transform: translateY(0px);
+  transition: 0.5s;
+}
+
 .fadein {
   animation: fadein 3s;
 }
 
 @keyframes fadein {
   0% {
-    opacity: 1;
+    opacity: 0;
   }
   20% {
     transform: translateY(0px);
+    opacity: 0;
   }
-  90% {
-    transform: translateY(-30px);
+  95% {
+    transform: translateY(-40px);
   }
   100% {
     transform: translateY(0px);
+    opacity: 1;
   }
 }
 
